# docs/swagger.json
@@ -197,7 +197,7 @@
                     },
                     {
                         "description": "Message to send",
-                        "name": "message",
+                        "name": "request",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -209,7 +209,7 @@
                     "200": {
                         "description": "Successfully sent message",
                         "schema": {
-                            "$ref": "#/definitions/entities.Message"
+                            "$ref": "#/definitions/apicontrollers.SendMessageResponse"
                         }
                     },
                     "400": {
@@ -252,7 +252,30 @@
             }
         },
         "apicontrollers.SendMessageRequest": {
-            "type": "object"
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string",
+                    "example": "Hello, how are you?"
+                },
+                "role": {
+                    "type": "string",
+                    "example": "user"
+                }
+            }
+        },
+        "apicontrollers.SendMessageResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string",
+                    "example": "I'm fine, thank you!"
+                },
+                "role": {
+                    "type": "string",
+                    "example": "assistant"
+                }
+            }
         },
         "entities.Agent": {
             "type": "object",
